_sass/style.scss
html, body {
    height: 100%;
}

body {
        font-family: $base-font-family;
        margin: 0;
        line-height: $base-line-height;
        font-size: $base-font-size;
        color: $text-color;
        text-rendering: optimizeLegibility;
        height: 100%;

    }

    h1,h2,h3,h4,h5,h6 {
         font-family: "cooper-black-std", Helvetica, sans-serif;
         font-weight: bold;
         line-height: 1.8;
         margin: 0;
         text-transform: capitalize;
    }

    h1 {
      text-align: center;
    }

    h2 {
      color: $brand-color;
    }


a, p a {
    color: #D05014;
    text-decoration: underline;
    &:hover{
     font-weight: bold;
    }
}

ul {
  margin-left: 0;
  padding-left: 0;
}

li {
  list-style: none;
  margin-bottom: 10px;
}

li a {
  text-decoration: none;
  font-weight: bold;
  &:hover{
   text-decoration: underline;
  }
}

figure {
    margin: 0;
}

img {
    max-width: 100%;
}

pre,
code {
    overflow: auto;
    font-size: 0.7*$base-font-size;
    border-radius: 3px;
    border: 1px solid $brand-color;
    > code {
        border: none;
    }
}
pre {
        padding: 1em;
    }
code {
    padding: 0.1em;
    }
blockquote {
    border-left: 2px solid $brand-color;
    padding-left: 1em;
    font-family: Georgia,Times,Times New Roman,serif;
    font-size: 0.9*$base-font-size;
    font-style: italic;
    }



.headline, .post-headline {
    font-size: 3.5em;
    margin-bottom: 0.5em;

        @include media-query($on-palm) {
            font-size: 2em;
        }
    }

/* shit for the home page */
#columns {
  column-count: 2;
}

.stuff {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: flex-start;
  @include media-query($on-palm) {
      flex-direction: column;
  }
}

.item {
  width: 400px;
  display: flex;
  flex-direction: column;
  align-items: center;
    @include media-query($on-palm) {
      margin-top: 50px;
    }

}

.item.stickers {
  @include media-query($on-palm) {
  order: 99;
}
}

.item img {
padding-top: 25px;
}

.item.stickers img {
  padding-top: 40px;
}
/* my pic */
main {
  }





/* Article list in index/home page */
.article-list {
    margin: 1em 0;
}


/* Add video class for iframes to make them responsive */
.video {
    width: 100%;
    height: 360px;
    @include media-query($on-laptop) {
        height: 300px;
    }
    @include media-query($on-palm) {
        height: 180px;
    }
}

// Adding 'Contents' headline to the TOC
#markdown-toc::before {
    content: "Contents";
    font-weight: bold;
}


// Using numbers instead of bullets for listing
#markdown-toc ul {
    list-style: decimal;
}

#markdown-toc {
    border: 1px solid $brand-color;
    padding: 1.5em;
    list-style: decimal;
    display: inline-block;
}

/* Theme switch button */
.theme {
    cursor: pointer;
}

/* Footer */
footer {
    text-align: center;
    position: relative;
    margin-top: 60px;
    margin-bottom: 80px;
}

/* Footer navigation links */
.links a {
    margin-right: 1em;
}

/* Footer copyrights */
.copy {
    color: #aaa;
}

/* Horizontal Divider */
.divider {
    margin: 1em 0;
}

